Fix buttons causing brick posts to overlap (on search page)
Added a XKit.tools.debounce function to debounce the reflow function.

--- a/Extensions/xkit_patches.css
+++ b/Extensions/xkit_patches.css
@@ -157,3 +157,20 @@
 .tx-button .icon-wrapper.xkit-hidden{
     width: 15px;
 }
+
+
+/* Search Page Brick Post Fix */
+
+.post_brick .post_notes .note_link_current {
+    white-space: nowrap;
+}
+
+.post_brick .post_notes {
+    display: inline;
+}
+
+.post_brick .post_controls .post_controls_inner {
+    width: 100%;
+    white-space: normal;
+    height: auto;
+}
